Fix about page text cutoff

--- a/app/assets/stylesheets/components/slider.css.sass
+++ b/app/assets/stylesheets/components/slider.css.sass
@@ -1,7 +1,7 @@
 .slider
   margin: $base-line-height auto
   max-width: 760px
-  height: 345px
+  height: 445px
   position: relative
   +clearfix
 
